--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,26 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
+  # Proxy requests starting with /api/extraction/ to the pdf-extractor-service
+  location /api/extraction/ {
+      # The service name 'pdf-extractor-service' is resolved by Docker Compose's internal DNS
+      proxy_pass http://pdf-extractor-service:8001/;
+
+      # Set headers to pass along client information
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      # Increase max body size for file uploads if needed
+      client_max_body_size 20M;
+
+      # Optional: Add timeouts if needed
+      # proxy_connect_timeout       60s;
+      # proxy_send_timeout          60s;
+      # proxy_read_timeout          60s;
+  }
+
   # Optional: Add headers for caching, security, etc.
   # Example: Cache static assets for a long time
   location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|svg|woff|woff2|ttf|eot)$ {
