--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name localhost; # This will be accessed via the VPS Nginx proxy
+  server_name _; # Use underscore as a catch-all server name
 
   # Root directory for static files built by Vite
   root /usr/share/nginx/html;
