Update netlify.toml configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,3 @@
 [build]
-  base = "project"
-  publish = "dist"
-  command = "npm run build"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  command = "cd project && npm install && npm run build"
+  publish = "project/dist"
