--- a/pdf-processor/pyproject.toml
+++ b/pdf-processor/pyproject.toml
@@ -2,21 +2,17 @@
 name = "pdf-processor"
 version = "0.1.0"
 description = "API service for processing PDF documents using Docling"
-authors = ["Your Name <you@example.com>"] # Placeholder - update if needed
-# readme = "README.md" # Optional README for the service - Not needed for non-package mode
-package-mode = false # Tell Poetry this is not a package to be built/installed
+authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.111.0" # For building the API
-uvicorn = {extras = ["standard"], version = "^0.29.0"} # ASGI server to run FastAPI
-python-multipart = "^0.0.9" # Para processamento de formulários multipart
-pymupdf = "^1.23.26" # Para extração de texto de PDFs (PyMuPDF)
-pandas = "^2.2.2" # Para manipulação de tabelas extraídas
-# Docling dependencies
-# Dependências adicionais
-pytesseract = "^0.3.10" # OCR engine
-pdf2image = "^1.17.0" # Converter PDF para imagens
+fastapi = "^0.111.0"
+uvicorn = {extras = ["standard"], version = "^0.29.0"}
+python-multipart = "^0.0.9"
+pymupdf = "^1.23.26"
+pandas = "^2.2.2"
+pytesseract = "^0.3.10"
+pdf2image = "^1.17.0"
 
 [build-system]
 requires = ["poetry-core"]
