Update API URL and Netlify configuration

--- a/project/netlify.toml
+++ b/project/netlify.toml
@@ -1,6 +1,8 @@
 [build]
+  base = "project"
   publish = "dist"
   command = "npm run build"
+  ignore = "git submodule status"
 
 [[redirects]]
   from = "/*"
