--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,10 @@
   # Diretório que contém os arquivos estáticos após o build (relativo ao 'base')
   publish = "dist/"
 
+# Configuração do scanner de segurança para permitir variáveis específicas
+[build.environment]
+  SECRETS_SCAN_OMIT_KEYS = "VITE_EXTRACTION_API_URL"
+
 # Redirecionamento para lidar com roteamento de Single Page Application (SPA)
 # Necessário para o React Router funcionar corretamente
 [[redirects]]
