--- a/pdf-processor/pyproject.toml
+++ b/pdf-processor/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = {extras = ["standard"], version = "^0.29.0"} # ASGI server to run Fast
 python-multipart = "^0.0.9" # Para processamento de formulários multipart
 pymupdf = "^1.23.26" # Para extração de texto de PDFs (PyMuPDF)
 pandas = "^2.2.2" # Para manipulação de tabelas extraídas
+requests = "^2.31.0" # Para requisições HTTP
 # Docling dependencies
 # Dependências adicionais
 pytesseract = "^0.3.10" # OCR engine
