--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.344.0",
     "node-forge": "^1.3.1",
+    "pdf-parse": "^1.1.1",
     "pdfjs-dist": "3.11.174",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
